--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,3 +2,41 @@
   text-align: center;
   font-family: Helvetica;
 }
+
+h1 {
+  font-size: 70px;
+  font-weight: bold;
+  color: white;
+}
+nav {
+  color: white;
+  font-size: 18px;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p {
+  font-size: 14px;
+}
+
+.white {
+  color: white;
+}
+
+.flatiron {
+  background-image: url(../resources/images/the-flatiron-building.png);
+}
+
+#foot {
+  text-align: left;
+  font-size: 11px;
+  background-color: dimgray;
+}
