--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,25 +6,26 @@
 h1 {
   font-size: 70px;
   font-weight: bold;
-  color: white;
 }
 nav {
-  color: white;
   font-size: 18px;
 }
 
 h2 {
   font-size: 32px;
   font-weight: bold;
+  color: black;
 }
 
 h3 {
   font-size: 23px;
   font-weight: bold;
+  color: black;
 }
 
 p {
   font-size: 14px;
+  color: black;
 }
 
 .white {
