--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,6 +6,7 @@
 h1 {
   font-size: 70px;
   font-weight: bold;
+  background-image: url(../images/the-flatiron-building.png);
 }
 nav {
   font-size: 18px;
