Add headnav background

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -53,3 +53,7 @@ footer p a {
 .gray {
   background-color: dimgray;
 }
+
+.headnav {
+  background-image: url(../images/the-flatiron-building.png);
+}
