Fix header background

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,6 +54,6 @@ footer p a {
   background-color: dimgray;
 }
 
-.headnav {
+header h1 {
   background-image: url(../images/the-flatiron-building.png);
 }
