--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -54,6 +54,6 @@ footer p a {
   background-color: dimgray;
 }
 
-header h1 nav {
+header {
   background-image: url(../images/the-flatiron-building.png);
 }
