--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,15 +2,19 @@
   text-align: center;
   font-family: Helvetica;
 }
+header {
+  background-image: url(../images/the-flatiron-building.png);
+}
 
 h1 {
   font-size: 70px;
   font-weight: bold;
   color: white;
 }
-nav {
-  font-size: 18px;
+
+a {
   color: white;
+  font-size: 18px;
 }
 
 h2 {
@@ -32,21 +36,12 @@ p {
   background-image: url(../images/the-flatiron-building.png);
 }
 
-a {
-  color: white;
-  font-size: 18px;
-}
-
-.footwhite {
+#footwhite {
   text-align: left;
   font-size: 11px;
 }
 
-.gray {
+#gray {
   background-color: dimgray;
   color: white;
-}
-
-header {
-  background-image: url(../images/the-flatiron-building.png);
 }
